force-app/main/default/objects/AccountPlan__c/fields/Attendee__c.field-meta.xml
<CustomField>
    <fullName>Attendee__c</fullName>
    <description>참석자</description>
    <label>Attendee</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>