force-app/main/default/objects/AccountPlan__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>내용</description>
    <label>Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>