force-app/main/default/objects/AccountPlan__c/fields/EndDateTime__c.field-meta.xml
<CustomField>
    <fullName>EndDateTime__c</fullName>
    <description>종료일시</description>
    <label>End Date Time</label>
    <type>DateTime</type>
</CustomField>