force-app/main/default/objects/AccountPlan__c/fields/IsAllDayEvent__c.field-meta.xml
<CustomField>
    <fullName>IsAllDayEvent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>시간 - 하루종일</description>
    <label>All-Day Event</label>
    <type>Checkbox</type>
</CustomField>