force-app/main/default/objects/AccountPlan__c/fields/StartDateTime__c.field-meta.xml
<CustomField>
    <fullName>StartDateTime__c</fullName>
    <description>시작일시</description>
    <label>Start Date Time</label>
    <type>DateTime</type>
</CustomField>