force-app/main/default/objects/AccountPlan__c/validationRules/End_Date_Time.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Date_Time</fullName>
    <active>false</active>
    <errorConditionFormula>AND(NOT(ISNULL(EndDateTime__c)), StartDateTime__c &gt;=EndDateTime__c)</errorConditionFormula>
    <errorDisplayField>EndDateTime__c</errorDisplayField>
    <errorMessage>The end date must be greater than the start date.</errorMessage>
</ValidationRule>