force-app/main/default/objects/AccountPlan__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>AccountId__c</columns>
    <columns>Attendee__c</columns>
    <columns>StartDateTime__c</columns>
    <columns>EndDateTime__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All AP Sessions</label>
</ListView>