force-app/main/default/objects/AccountPlan__c/listViews/My_Closed_AP_Sessions.listView-meta.xml
<ListView>
    <fullName>My_Closed_AP_Sessions</fullName>
    <columns>NAME</columns>
    <columns>AccountId__c</columns>
    <columns>Attendee__c</columns>
    <columns>StartDateTime__c</columns>
    <columns>EndDateTime__c</columns>
    <columns>Status__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </filters>
    <label>My Closed AP Sessions</label>
</ListView>